// MarketMint - Crypto Dashboard
// Conceptual data model. Persistence layer: SQL (PostgreSQL-compatible).
// Visualize at: https://dbdiagram.io
// Full documentation: docs/schema.md
//
// Authentication: Better Auth (internal library, not an external hosted provider).
// Better Auth owns the core auth schema: user, session, account, verification.
// MarketMint extends the Better Auth user with application fields (role, banned, ban_reason, ban_expires).
// The tables below represent the MarketMint application schema only.
// Better Auth tables are auto-generated by the library during setup.

// ---------------------------------------------------------------------------
// BETTER AUTH — auto-generated tables (do not define manually)
// ---------------------------------------------------------------------------
// Better Auth will create and manage these tables:
//
//   user          — core user identity (id, email, name, image, emailVerified, etc.)
//   session       — cookie-based sessions (token, userId, expiresAt, ipAddress, userAgent)
//   account       — linked provider accounts (userId, providerId, accountId, password, etc.)
//   verification  — email/magic-link verification tokens
//
// These tables are NOT defined here. Better Auth generates them based on the
// configured plugins and the selected database adapter.
// Reference: https://www.better-auth.com/docs/concepts/database

// ---------------------------------------------------------------------------
// MARKETMINT USER EXTENSIONS
// ---------------------------------------------------------------------------

// MarketMint adds these columns directly onto the Better Auth `user` table
// (not a separate table) via the Drizzle schema in apps/api/src/db/schema.ts.
Table user {
  id          text      [pk, note: "Better Auth user id"]
  role        text       [note: "user | admin"]
  banned      boolean   [default: false, note: "Managed by Better Auth Admin plugin"]
  ban_reason  text
  ban_expires timestamp [note: "null means permanent"]

  Note: "Core identity columns (email, name, image, emailVerified, etc.) are managed by Better Auth and not repeated here. role/banned/ban_reason/ban_expires are MarketMint application fields added to the same table."
}

// Stores user-to-asset relationship only. No market values.
// Market data is resolved from crypto_assets at query time.
// user_id references Better Auth user.id.
Table user_favorite_cryptos {
  id                varchar    [pk, default: `gen_random_uuid()`]
  user_id           varchar    [not null, ref: > user.id]
  provider_asset_id varchar    [not null, ref: > crypto_assets.provider_asset_id]
  symbol            varchar    [not null]
  name              varchar    [not null]
  created_at        timestamp  [not null, default: `now()`]

  indexes {
    (user_id, provider_asset_id) [unique, name: "uq_user_favorites"]
  }
}

// ---------------------------------------------------------------------------
// CRYPTO MARKET DATA  (shared, not user-owned)
// ---------------------------------------------------------------------------

// Local synchronized catalog. Up to 250 assets from CoinGecko, upserted on a
// CRYPTO_SYNC_INTERVAL_MINUTES interval (default 5 min). Holds each asset's
// CURRENT state only — see crypto_asset_snapshots for history.
// Source for: dashboard Top 10, local search, favorites resolution, alert evaluation.
Table crypto_assets {
  id                       varchar   [pk, default: `gen_random_uuid()`]
  provider                 varchar   [not null, note: "coingecko"]
  provider_asset_id        varchar   [not null, unique, note: "e.g. bitcoin, ethereum"]
  symbol                   varchar   [not null]
  name                     varchar   [not null]
  market_cap_rank          integer
  is_active                boolean   [not null, default: true, note: "false if absent from latest sync for this provider"]
  current_price_usd        numeric   [not null]
  market_cap_usd           numeric
  total_volume_usd         numeric
  high_24h_usd             numeric
  low_24h_usd              numeric
  price_change_24h_usd     numeric
  price_change_pct_1h      numeric
  price_change_pct_24h     numeric
  price_change_pct_7d      numeric
  circulating_supply       numeric
  total_supply             numeric
  max_supply               numeric
  ath_usd                  numeric
  ath_change_pct           numeric
  ath_date                 timestamp
  atl_usd                  numeric
  atl_change_pct           numeric
  atl_date                 timestamp
  sparkline_7d             jsonb     [note: "7-day price array for sparkline chart"]
  provider_updated_at      timestamp
  last_synced_at           timestamp [not null]
  created_at               timestamp [not null, default: `now()`]
  updated_at               timestamp [not null, default: `now()`]
}

// Append-only price/market-data history. One row per asset per sync run —
// never updated, unlike crypto_assets. Rows older than
// CRYPTO_SNAPSHOT_RETENTION_DAYS (default 180) are pruned every sync.
Table crypto_asset_snapshots {
  id                       varchar   [pk, default: `gen_random_uuid()`]
  sync_run_id              varchar   [not null, ref: > crypto_sync_runs.id]
  provider                 varchar   [not null, note: "coingecko"]
  provider_asset_id        varchar   [not null, note: "not unique - many rows accumulate per asset over time"]
  symbol                   varchar   [not null]
  name                     varchar   [not null]
  market_cap_rank          integer
  current_price_usd        numeric   [not null]
  market_cap_usd           numeric
  total_volume_usd         numeric
  high_24h_usd             numeric
  low_24h_usd              numeric
  price_change_24h_usd     numeric
  price_change_pct_1h      numeric
  price_change_pct_24h     numeric
  price_change_pct_7d      numeric
  circulating_supply       numeric
  total_supply             numeric
  max_supply               numeric
  ath_usd                  numeric
  ath_change_pct           numeric
  ath_date                 timestamp
  atl_usd                  numeric
  atl_change_pct           numeric
  atl_date                 timestamp
  sparkline_7d             jsonb
  provider_updated_at      timestamp
  snapshot_at              timestamp [not null, note: "shared by every asset row from the same sync run"]
  created_at               timestamp [not null, default: `now()`]

  indexes {
    (provider_asset_id, snapshot_at) [name: "idx_crypto_asset_snapshots_asset_time"]
  }
}

// Global market KPIs from CoinGecko /global. Append-only — each sync inserts
// a new row rather than upserting, so KPI history is preserved. The "current"
// KPIs are the most recent row by created_at.
Table crypto_market_kpis {
  id                        varchar   [pk, default: `gen_random_uuid()`]
  provider                  varchar   [not null, note: "coingecko"]
  active_cryptocurrencies   integer
  markets                   integer
  total_market_cap_usd      numeric
  total_volume_usd          numeric
  btc_dominance_pct         numeric
  eth_dominance_pct         numeric
  usdt_dominance_pct        numeric
  market_cap_change_pct_24h numeric
  volume_change_pct_24h     numeric [note: "currently always null - CoinGecko has no equivalent /global field"]
  provider_updated_at       timestamp
  last_synced_at            timestamp [not null]
  created_at                timestamp [not null, default: `now()`]
  updated_at                timestamp [not null, default: `now()`]
}

// Sync operation log. 2 CoinGecko calls per run. Mutual exclusion is enforced
// via a Postgres advisory lock (not a timestamp heuristic), so at most one
// run is ever status = "running" at a time.
Table crypto_sync_runs {
  id               varchar   [pk, default: `gen_random_uuid()`]
  provider         varchar   [not null, note: "coingecko"]
  trigger          varchar   [not null, note: "manual | scheduled"]
  status           varchar   [not null, note: "running | success | failed"]
  started_at       timestamp [not null]
  finished_at      timestamp
  assets_requested integer
  assets_updated   integer
  kpis_updated     boolean
  error_message    text
  created_at       timestamp [not null, default: `now()`]
}

// ---------------------------------------------------------------------------
// AUDIT LOGS  (MarketMint-owned application table)
// ---------------------------------------------------------------------------

// Application-level audit trail for auth and admin events.
// actor_user_id and target_user_id reference Better Auth user.id.
Table audit_logs {
  id             varchar   [pk, default: `gen_random_uuid()`]
  actor_user_id  varchar   [ref: > user.id]
  target_user_id varchar   [ref: > user.id]
  action         varchar   [not null, note: "AUTH_REGISTER_SUCCESS | AUTH_LOGIN_SUCCESS | AUTH_LOGIN_FAILED | AUTH_GOOGLE_LOGIN_SUCCESS | AUTH_LOGOUT | USER_CREATED | USER_UPDATED | USER_BANNED | USER_UNBANNED | USER_ROLE_UPDATED"]
  metadata       jsonb
  ip_address     varchar
  user_agent     varchar
  created_at     timestamp [not null, default: `now()`]
}

// ---------------------------------------------------------------------------
// OPTIONAL — FUTURE FEATURES (not yet implemented)
// ---------------------------------------------------------------------------

// Alerts would evaluate against crypto_assets.current_price_usd, not CoinGecko directly.
// user_id references Better Auth user.id.
Table price_alerts {
  id                varchar   [pk, default: `gen_random_uuid()`]
  user_id           varchar   [not null, ref: > user.id]
  provider_asset_id varchar   [not null, ref: > crypto_assets.provider_asset_id]
  symbol            varchar   [not null]
  target_price_usd  numeric   [not null]
  condition         varchar   [not null, note: "above | below"]
  status            varchar   [not null, default: "active", note: "active | triggered | disabled"]
  created_at        timestamp [not null, default: `now()`]
  updated_at        timestamp [not null, default: `now()`]
  triggered_at      timestamp
}
